--- a/css/index.css
+++ b/css/index.css
@@ -27,6 +27,7 @@ body{
     transform: translateY(-20%);
     box-sizing: border-box;
     border-bottom: 2px solid rgb(14, 13, 13);
+    background-color:white ;
     
     
 }
@@ -273,5 +274,38 @@ body{
 
 }
 
+.sobre-nos{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 10%;
+    height: 600px;
+    background-image: url(../assets/images.jpg);
+    background-size: cover;
+    background-position: center;
+        
+}
+
+.borda-preta{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    border: 2px solid black;
+    width: 13%;
+    height: 350px;
+}
+
+.borda-backgroud {
+    
+    border: 2px solid #000;
+    background-color: #000;
+    width: 40%;
+    height: 25px;
+
+}
 
 
+.imagem-equipe{
+    display: flex;
+    
+}
