--- a/css/index.css
+++ b/css/index.css
@@ -352,15 +352,55 @@ body{
     position: absolute;
     display: flex;
     flex-wrap: wrap;
-    gap: 10px;
+    gap: 17px;
     width: 59%;
     top: 1718px;
     left: 21%;
    
   }
+
 .box{
   flex: 1 1 calc(50% - 10px);
   border: 1px solid #ffffff;
   height: 100px;
   display: flex;
+}
+
+.caixa-texto{
+ display: flex;
+ justify-content: center;
+ flex-direction: column;
+ align-items: center;
+ margin-left: 16px;
+ margin-bottom: 31px;
+}
+
+.equipe {
+    display: flex;
+    width: 100%;
+    height: 700px;
+    justify-content: center;
+    align-items: center;
+}
+
+.container {
+    position: absolute;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 23px;
+    width: 51%;
+    justify-content: center; /* Centraliza o conteúdo no container */
+}
+
+.caixa-equipe {
+    display: flex;
+    border: 1px solid #000;
+    width: 23%;
+    height: 203px;
+}
+
+/* Para as duas últimas caixas */
+.container .caixa-equipe:nth-child(4),
+.container .caixa-equipe:nth-child(5) {
+    margin-left: calc(30% - (22% + 18px)); /* Centraliza as duas últimas caixas */
 }
