--- a/css/index.css
+++ b/css/index.css
@@ -275,52 +275,49 @@ body{
 }
 
 .sobre-nos {
-    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 600px;
 }
 
-.borda-preta {
-    position: absolute;
-    right: 44%;
-    z-index: 5;
-    width: 19%;
-    height: 332px;
-    border: 4px solid black;
-    border-radius: 7%;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    bottom: 10%
-}
+.fundo-preto{
+ 
 
-
-.borda-backgroud {
-    border: 2px solid #000;
     background-color: #000;
-    width: 40%;
-    height: 25px;
+    width: 89%;
+    height: 402px;
+    border-radius: 20px;
 }
 
-.sobre-nos img {
-    position: relative;
-    z-index: 0;
-    width: 20%;
-    height: 325px;
-    transform: translateX(13%);
-    border-radius: 10%;
+.fundo-preto h5{
+    color:#ffffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 25px;    
+    height: 110px;
+    
 }
 
-.texto-equipe {
+.fundo-preto p{
+    
+    color: white;
+    width: 43%;
+    margin-left: 27px;
+
+}
+
+.fundo-preto img{
     position: absolute;
-    left: 68%;
-    top: 20%;
-    z-index: 10;
-    width: 40%;
-    padding: 21px;
+    width: 27%;
+    left: 60%;
+    top: 1064px;
 }
+
+
+
+
 
 .servicos{
     display: flex;
