--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -20,6 +20,50 @@ body{
     height: 100%;
 }
 
+.nav {
+    display: flex;
+    height: 10%;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.nav .login a {
+    text-decoration: none;
+    color: black;
+}
+
+.nav .home {
+    background-color: rgb(20, 17, 17);
+    border-radius: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+    height: 2rem;
+    width: 8rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.nav .home a {
+    text-decoration: none;
+    color: white;
+}
+
+.info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 90vh;
+}
+
+.box-login {
+    border: solid 3px black;
+    height: 500px;
+    width: 100%;
+}
 
 .imagem{
     background-image: url(https://blog.alfaconcursos.com.br/wp-content/uploads/2022/05/policia-civil-ou-militar-scaled.jpeg);
