--- a/css/index.css
+++ b/css/index.css
@@ -121,15 +121,18 @@ body{
     border-radius: 21px 24px 27px;
 }
 
-@media only screen and (max-width: 768px){
+.teste{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
-   
-};
     
 
 .box-big {
     display: flex;
     justify-content: center;
+    height: 87%;
 }
 
 .imagem-principal {
@@ -377,9 +380,6 @@ body{
 }
 
 
-
-
-
 .caixa-equipe img{
     display: flex;
     width: 39%;
@@ -413,3 +413,36 @@ body{
     height: 353px;
 }
 
+@media only screen and (max-width: 1418px){
+
+    .imagem-principal{
+        height: 70vh;
+    }
+
+    .imagem-policia img {
+        position: relative;
+        height: 320px;
+        top: -390px;
+    }
+
+    .overlay{
+        top: 37%;
+    }
+
+    .realizacao{
+        flex-direction: column-reverse;
+        height: 153px;
+        gap: 20px;
+        height: 189px;
+    }
+
+    .video{
+        display: none;
+    }
+
+
+    .fundo-preto p{
+        width: 65%;
+    }
+   
+}
