--- a/css/index.css
+++ b/css/index.css
@@ -10,7 +10,10 @@ body{
    background-attachment: fixed;
    overflow-x: hidden;
 }
+html{
 
+     scroll-behavior: smooth;
+}
 
 
 .header {
@@ -92,6 +95,23 @@ body{
     font-size: 19px;
 }
 
+.entrar  a:hover {
+        transition: 0.5s;
+        opacity: 0.7;
+        font-size: 19px;
+        
+    }
+
+    a{
+      color: inherit;
+  text-decoration: none;
+    }
+
+    .cadastro ul li a {
+        text-decoration: none;
+        color: #ffffff;
+        transition: 0.5s;
+    }
 
 
 
