--- a/public/css/index.css
+++ b/public/css/index.css
@@ -16,7 +16,7 @@ html{
 }
 
 
-.header {
+header {
     width: 100%;
     height: 13%;
     padding: 10px 20px;
@@ -35,7 +35,7 @@ html{
     
 }
 
-.nav {
+nav {
     width: 59%;
     display: flex;
     flex-direction: row;
@@ -49,7 +49,7 @@ html{
 }
 
 
-.nav ul {
+nav ul {
     width: 62%;
     height: 15vh;
     display: flex;
@@ -60,36 +60,36 @@ html{
     color: #000000;
 }
 
-.nav ul li {
+nav ul li {
     font-size: 14px;
 }
 
 
-.nav ul img{
+nav ul img{
     width: 20px;
     height: auto;
     margin-left: -5%;
 }
 
-.nav ul li a {
+nav ul li a {
     text-decoration: none;
     color: #000000;
     transition: 0.5s;
 }
 
-.nav a:hover {
+nav a:hover {
     transition: 0.5s;
     opacity: 0.7;
     font-size: 19px;
 }
 
-.nav .teste ul li a {
+nav .teste ul li a {
     text-decoration: none;
     color: #000000;
     transition: 0.5s;
 }
 
-.nav .teste a:hover {
+nav .teste a:hover {
     transition: 0.5s;
     opacity: 0.7;
     font-size: 19px;
@@ -161,17 +161,11 @@ html{
 
     
 
-.box-big {
-    display: flex;
-    justify-content: center;
-    height: 87%;
-}
-
 .imagem-principal {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 113vh; /* Ou ajuste conforme necessário */
+    height: 113vh; 
 }
 
 .fundo{
@@ -227,57 +221,56 @@ html{
 }
 
 .imagem-policia img{
-    height: 439px;
+    height: auto;
+    padding: 23px 0px 0px;
 }
 
-
-.realizacao {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    height: 78px;
+.realizacao{
     width: 100%;
 }
 
+.container-missao{
+    display: flex;
+    justify-content: space-evenly;
+}
 
 
-.realizacao .crime{
+.container-missao .box-missao{
     border: 1px solid #000;
     width: 26%;
-    height: 183px;
+    height: auto;
     padding: 17px;
     border-radius: 10px 10px 10px;
 }
 
-.crime img{
+.box-missao img{
     
     border: 0px solid #000;
     border-radius: 34px 35px;
-    width: 15%;
+    width: 45px;
 }
 
 
 
-.crime img{
+.box-missao img{
     border: 0px solid #000;
     border-radius: 34px 35px;
     width: 15%;
 
 }
 
-.sobre-nos {
+.container-sobre {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 600px;
+    height: auto;
+    margin: 48px;
 }
 
 .fundo-preto{
- 
-
     background-color: #000;
     width: 89%;
-    height: 402px;
+    height: auto;
     border-radius: 20px;
 }
 
@@ -317,62 +310,37 @@ html{
     align-items: center;
     text-align: center;
     color: white;
-    height: 565px;
+    height: auto;
     width: 100%;
 }
 
 
 .principal-servico{
+    display: flex;
     border: 1px solid #000;
     background-color: black;
     width: 85%;
-    height: 496px;
+    height: 71vh;
     border-radius: 20px;
 }
 
 .principal-servico h1{
-    display: flex;
-    position: absolute;
-    left: 36%;
-    top: 1592px;
-    width: 26%;
-
+    height: 13vh;
 }
+
+
 
 .caixa{
-    position: absolute;
     display: flex;
-    flex-wrap: wrap;
-    gap: 17px;
-    width: 59%;
-    top: 1718px;
-    left: 21%;
-   
-  }
-
-.box{
-  flex: 1 1 calc(50% - 10px);
-  border: 1px solid #ffffff;
-  height: 100px;
-  display: flex;
+    height: auto;
+    width: 100%;
+    align-items: center;
 }
 
-.box img{
-    display: flex;
-    display: flex;
-    margin-left: 12px;
-    margin-top: 10px;
-    width: 18%;
-    height: 85px;
+.caixa-texto img{
+    width: 40%;
 }
 
-.caixa-texto{
- display: flex;
- justify-content: center;
- flex-direction: column;
- align-items: center;
-
-}
 
 .equipe {
     display: flex;
@@ -506,141 +474,3 @@ html{
 }
 
   
-
-@media only screen and (max-width: 1418px){
-    .nav ul{
-        width: 88%;
-        height: 15vh;
-    }
-
-    .titulo {
-        padding: 6vh 0vw;
-        font-size: 31px;
-    }
-    
-
-    .nav ul li {
-        font-size: 20px;
-    }
-
-    .nav ul img {
-        width: 34px;
-    }
-
-    .entrar ul li {
-    
-        font-size: 21px;
-    }
-    .entrar ul {
-    
-        width: 80%;
-    }
-
-    .entrar li img {
-        width: 4vw;
-    }   
-    
-    .imagem-principal{
-        height: 70vh;
-    }
-
-    .imagem-policia img {
-        position: relative;
-        height: 320px;
-        top: -390px;
-    }
-
-    .overlay{
-        top: 37%;
-    }
-
-    .realizacao{
-        flex-direction: column-reverse;
-        gap: 20px;
-        height: 286px;
-    }
-
-    .realizacao .crime{
-        width: 42%;
-        height: 241px;
-        font-size: 21px;
-        padding: 12px;
-    }
-
-    .video{
-        display: none;
-    }
-
-
-    .fundo-preto p{
-        width: 88%;
-        font-size: 20px;
-    }
-
-    .principal-servico{
-
-        height: 708px;
-
-    }
-
-    .principal-servico h1 {
-        left: 29%;
-        top: 1813px;
-        width: 42%;
-    }
-
-    .box{
-        height: 106px;
-    }
-
-    .caixa-texto{
-        font-size: 21px;
-    }
-
-    .caixa{
-        gap: 21px;
-        width: 69%;
-        top: 1956px;
-        left: 15%;
-    }
-
-    .caixa-equipe{
-        height: 203px;
-    
-    }
-
-    .caixa-equipe h6{
-        font-size: 16px;
-    }
-
-    .caixa-equipe p{
-        font-size: 24px; 
-    }
-
-    
-
-    .equipe{
-        height: 798px;
-    }
-
-    .equipe h4{
-        left: 17%;
-    width: 72%;
-    font-size: 33px;
-    top: 2500px;
-    }
-
-    .container{
-        right: 24px;
-        width: 93%;
-        top: 2706px;
-    }
-
-    .column{
-        font-size: 20px;
-        margin-left: 22px;
-    }
-
-
-   
-}
