--- a/public/css/index.css
+++ b/public/css/index.css
@@ -160,40 +160,51 @@ nav .teste a:hover {
 }
 
     
-
 .imagem-principal {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 113vh; 
+    height: 113vh;
+    position: relative; /* Para controlar o posicionamento */
 }
 
-.fundo{
-    width: 89%;
-    
-}
-
-.imagem-principal .fundo img {
+.fundo {
+    display: flex;
+ 
     width: 100%;
+    align-items: center;
+    justify-content: center
+}
+
+.fundo img {
+    width: 85%;
     border: 5px solid black;
     border-radius: 64px;
+    object-fit: cover;
 }
 
 .overlay {
-    position: absolute; 
-    top: 57%; 
-    left: 24%; 
-    transform: translate(-50%, -50%); 
-    text-align: center; 
+    display: flex;
+    flex-direction: column; /* Alinha texto e botão em coluna */
+    align-items: center; /* Centraliza horizontalmente */
+    justify-content: center; /* Centraliza verticalmente */
+    text-align: center;
     color: white;
-    background: rgba(0, 0, 0, 0.5); 
+    background: rgba(0, 0, 0, 0.5);
     border-radius: 15px;
-    width: 31%;
+    width: 30%; /* Ajusta a largura do overlay */
+    max-width: 400px; /* Limita a largura máxima */
+    padding: 20px; /* Adiciona um padding para o overlay */
+    position: absolute; /* Mantém o overlay sobre a imagem de fundo */
+    top: 50%; /* Alinha verticalmente */
+    left: 25%; /* Centraliza horizontalmente */
+    transform: translate(-50%, -50%); /* Move para o centro */
 }
 
 .overlay p {
     margin: 0 0 10px 0; /* Margem abaixo do texto */
     font-size: 24px;
+    line-height: 1.4; /* Aumenta o espaçamento entre linhas */
 }
 
 .overlay button {
@@ -208,21 +219,6 @@ nav .teste a:hover {
 
 .overlay button:hover {
     background-color: #444;
-}
-
-.imagem-policia {
-    position: absolute;
-    top: 66%;
-    left: 66%;
-    transform: translate(-58%, -50%);
-    text-align: center;
-    padding: 0px;
-    border-radius: 15px;
-}
-
-.imagem-policia img{
-    height: auto;
-    padding: 23px 0px 0px;
 }
 
 .realizacao{
@@ -304,68 +300,80 @@ nav .teste a:hover {
 
 
 
-.servicos{
+.servicos {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; /* Centraliza verticalmente o container inteiro */
     text-align: center;
     color: white;
     height: auto;
     width: 100%;
 }
 
-
-.principal-servico{
+.principal-servico {
     display: flex;
+    flex-direction: column; 
+    align-items: center;
+    justify-content: flex-start; 
     border: 1px solid #000;
     background-color: black;
     width: 85%;
     height: 71vh;
     border-radius: 20px;
+    padding: 20px; 
 }
 
-.principal-servico h1{
-    height: 13vh;
+.principal-servico h1 {
+    height: auto; 
+    margin-bottom: 20px; 
 }
 
-
-
-.caixa{
+.principal-servico .caixa {
     display: flex;
-    height: auto;
+    flex-wrap: wrap; 
+    justify-content: space-around; 
+    height: 100%; 
     width: 100%;
-    align-items: center;
 }
 
-.caixa-texto img{
-    width: 40%;
+.caixa-texto {
+    display: flex;
+    flex-direction: column; 
+    align-items: center;
+    justify-content: center;
+    width: 45%; 
+    margin: 10px 0; 
+    padding: 10px; 
+    background-color: #222; 
+    border-radius: 10px; 
+}
+
+.caixa-texto img {
+    width: 60px;
+    margin-bottom: 10px; 
 }
 
 
 .equipe {
     display: flex;
     width: 100%;
-    height: 700px;
+    height: auto;
+  
     justify-content: center;
     align-items: center;
 }
 
 .equipe h4{
     display: flex;
-    position: absolute;
-    left: 10%;
     width: 27%;
     font-size: 26px;
-    top: 2263px;
+   
 }
 
 .container {
-    position: absolute;
     display: flex;
     flex-wrap: wrap;
-    right: 120px;
     width: 51%;
-    top: 2133px;
     justify-content: center;
 }
 
@@ -411,7 +419,7 @@ nav .teste a:hover {
  footer {
     background: url(../assets/Captura\ de\ tela\ 2024-09-03\ 123420.png) no-repeat center center;
     background-size: cover;
-    height: 400px;
+    height: 40vh;
   }
   
   .footer-section {
@@ -420,7 +428,7 @@ nav .teste a:hover {
     
     display: flex;
     justify-content: space-evenly;
-   height: 100px;
+   height: auto;
   }
 
   
@@ -429,6 +437,7 @@ nav .teste a:hover {
   .footer-columns {
     display: flex;
     justify-content: space-evenly;
+    margin: 57px;
     
   }
   
