--- a/public/css/index.css
+++ b/public/css/index.css
@@ -20,7 +20,7 @@ header {
     width: 100%;
     height: 13%;
     padding: 10px 20px;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     display: flex;
