--- a/public/css/index.css
+++ b/public/css/index.css
@@ -481,3 +481,31 @@ form label{
     
 
 }
+
+
+@media(max-width: 1024px){
+
+    .overlay p{
+        font-size: 19px
+    }
+
+    .principal-servico{
+        height: 82vh;
+    }
+
+
+    .equipe h4{
+        font-size: 26px;
+    }
+
+    .container{
+        width: 51%;
+    }
+
+    .caixa-equipe{
+        width: 42%;
+    }
+
+
+}
+
