--- a/public/css/cadastro.css
+++ b/public/css/cadastro.css
@@ -8,7 +8,7 @@ body{
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-.container {
+.box-principal {
     display: flex;
     width: 100%;
     height: 100vh;
@@ -23,19 +23,19 @@ body{
     height: 100%;
 }
 
-.nav {
+.nav-novo {
     display: flex;
     height: 10%;
     justify-content: flex-end;
     align-items: center;
 }
 
-.nav .login a {
+.nav-novo .login a {
     text-decoration: none;
     color: black;
 }
 
-.nav .home {
+.nav-novo .home {
     background-color: rgb(20, 17, 17);
     border-radius: 20px;
     margin-left: 20px;
@@ -48,7 +48,7 @@ body{
 }
 
 
-.nav .home a {
+.nav-novo .home a {
     margin-right: 15px;
     text-decoration: none;
     color: white;
@@ -134,7 +134,7 @@ input {
     cursor: pointer;
 }
 
-.imagem{
+.teste{
     background-image: url(https://blog.alfaconcursos.com.br/wp-content/uploads/2022/05/policia-civil-ou-militar-scaled.jpeg);
     background-size: cover;
     background-repeat: no-repeat;
