--- a/public/css/cadastroOperacao.css
+++ b/public/css/cadastroOperacao.css
@@ -51,6 +51,13 @@ a:hover {
 
 }
 
+.box-usuario{
+  display: flex;
+    align-items: center;
+    justify-content: end;
+    height: 10vh;
+}
+
 .outros {
     display: flex;
     flex-direction: column;
@@ -75,8 +82,8 @@ a:hover {
 
   
   .logo img {
-    max-width: 100%;
-    height: 110px;
+    max-width: 80%;
+  
   }
   
   .menu, .outros {
@@ -107,6 +114,7 @@ a:hover {
     justify-content: flex-start;
     height: 100%;
     color: #000 ;
+    font-size: 13px;
 }
   
   .menu button:hover, .outros button:hover {
@@ -116,7 +124,7 @@ a:hover {
   /* Estilos para as outras seções */
   .main-content {
     flex-grow: 1;
-    padding: 20px;
+    padding: 14px;
     background-color: #f4f4f4;
   }
   
