Arrumei as setas do cadastro e login

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -49,6 +49,10 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+
+    img {
+        height: 25px;
+    }
 }
 
 .nav a .texto{
