--- a/public/css/cadastro.css
+++ b/public/css/cadastro.css
@@ -45,6 +45,10 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+
+    img {
+        height: 25px;
+    }
 }
 
 
