--- a/public/css/cadastroOperacao.css
+++ b/public/css/cadastroOperacao.css
@@ -5,68 +5,33 @@ body {
     font-family: Arial, sans-serif;
   }
   
-  /* Navbar lateral (vertical) */
   .menu-lateral {
-    width: 250px;
-    color: white;
+    width: 20%;
+    height: 100vh;
+    background-color: #F1F2F7;
+    box-shadow:  0 0 5px #000;
+}
+
+.container-menu {
     display: flex;
     flex-direction: column;
-    align-items: center;
-  }
-
-  h4{
-    text-align: start;
-    padding: 10px;
-  }
-  
-  .container {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  a { 
-    display: flex;
     justify-content: flex-start;
-    align-items: center;
-    padding: 10px;
-    border-radius: 10px;
-    width: 90%;
-    height: 35px;
-
-    img {
-        height: 30px;
-        margin-right: 5px;
-        
-    };
+    height: 90%;
+    color: #000;
 }
 
-a:hover {
-    color: black;
-    background-color: #969ba3;
-    height: 35px;
-    width: 95%;
-    padding: 10px;
 
-}
-
-.box-usuario{
-  display: flex;
-    align-items: center;
-    justify-content: end;
-    height: 10vh;
-}
-
-.outros {
+.logo {
     display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    text-align: left;
-    height: 30%;
-    width: 85%;
-    margin-left: 15%;
+    justify-content: center;
+    align-items: center;
+    height: 25%;
 }
+
+.logo img {
+    height: 100%;
+}
+
 
 .menu {
     display: flex;
@@ -79,47 +44,42 @@ a:hover {
 
 }
 
-
-  
-  .logo img {
-    max-width: 80%;
-  
-  }
-  
-  .menu, .outros {
-    width: 100%;
-    padding: 18px;
-    text-align: center;
-  }
-  
-  .menu h5, .outros h5 {
-    color: #aaa;
-    margin-bottom: 10px;
-  }
-  
-  .menu button, .outros button {
-    width: 90%;
-    padding: 10px;
-    margin: 10px 0;
-    border: none;
-    background-color: #555;
-    color: white;
-    cursor: pointer;
-    border-radius: 4px;
-  }
-
-  .container {
+.outros {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    height: 100%;
-    color: #000 ;
-    font-size: 13px;
+    justify-content: space-evenly;
+    text-align: left;
+    height: 30%;
+    width: 85%;
+    margin-left: 15%;
 }
-  
-  .menu button:hover, .outros button:hover {
-    background-color: #777;
-  }
+
+a {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 10px;
+    border-radius: 10px;
+    width: 90%;
+    height: 35px;
+    text-decoration: none;
+    color: #000;
+
+    img {
+        height: 25px;
+        margin-right: 5px;
+    }
+}
+
+a:hover {
+    color: black;
+    background-color: #969ba3;
+    height: 35px;
+    width: 95%;
+    padding: 10px;
+    cursor: pointer;
+}
+
   
   /* Estilos para as outras seções */
   .main-content {
@@ -133,6 +93,11 @@ a:hover {
     margin-bottom: 20px;
     border-bottom: 2px solid #000;
     height: 65px;
+  }
+
+  .header .box-usuario{
+    display: flex;
+    justify-content: flex-end;
   }
   
   .cadastro-op {
