--- a/public/css/cadastroOperacao.css
+++ b/public/css/cadastroOperacao.css
@@ -1,198 +1,244 @@
-/* Estilos gerais para layout */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
 body {
-    margin: 0;
-    display: flex;
-    font-family: Arial, sans-serif;
-  }
-  
-  .menu-lateral {
-    width: 20%;
-    height: 100vh;
-    background-color: #F1F2F7;
-    box-shadow:  0 0 5px #000;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  display: flex;
+  flex-direction: row;
+}
+
+.menu-lateral {
+  width: 20%;
+  height: 100vh;
+  background-color: #F1F2F7;
+  box-shadow: 0 0 5px #000;
 }
 
 .container-menu {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    height: 90%;
-    color: #000;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  height: 100%;
+  color: #000;
 }
 
 
 .logo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 25%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 25%;
 }
 
 .logo img {
-    height: 100%;
+  height: 100%;
 }
 
 
 .menu {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    text-align: left;
-    height: 35%;
-    width: 85%;
-    margin-left: 15%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  text-align: left;
+  height: 35%;
+  width: 85%;
+  margin-left: 15%;
 
 }
 
 .outros {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    text-align: left;
-    height: 30%;
-    width: 85%;
-    margin-left: 15%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  text-align: left;
+  height: 30%;
+  width: 85%;
+  margin-left: 15%;
 }
 
 a {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    padding: 10px;
-    border-radius: 10px;
-    width: 90%;
-    height: 35px;
-    text-decoration: none;
-    color: #000;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 10px;
+  border-radius: 10px;
+  width: 90%;
+  height: 35px;
+  text-decoration: none;
+  color: #000;
 
-    img {
-        height: 25px;
-        margin-right: 5px;
-    }
+  img {
+    height: 25px;
+    margin-right: 5px;
+  }
 }
 
 a:hover {
-    color: black;
-    background-color: #969ba3;
-    height: 35px;
-    width: 95%;
-    padding: 10px;
-    cursor: pointer;
+  color: black;
+  background-color: #969ba3;
+  height: 35px;
+  width: 95%;
+  padding: 10px;
+  cursor: pointer;
 }
 
-  
-  /* Estilos para as outras seções */
-  .main-content {
-    flex-grow: 1;
-    padding: 14px;
-    background-color: #f4f4f4;
-  }
-  
-  .header {
-    height: 100px;
-    margin-bottom: 20px;
-    border-bottom: 2px solid #000;
-    height: 65px;
-  }
 
-  .header .box-usuario{
-    display: flex;
-    justify-content: flex-end;
-  }
-  
-  .cadastro-op {
- 
-    padding: 20px;
-    height: 66vh;
-  
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .box-op{
-    display: flex;
-    width: 100%;
-    justify-content: center;
-    
-  }
-
-  .box-desc{
-    width: 80%;
-  }
-
-  .box-desc input{
-    width: 95%;
-    height: 20vh;
-  }
-  
-  .cadastroOp-container {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    background-color: #b9bcc0;
-    border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    height: 100%;
-    justify-content: center;
-  }
-  
-  .box-form input{
-    display: grid;
-  grid-template-columns: 1fr 1fr; /* Cada linha terá 2 inputs */
-  gap: 20px;
-  }
-  
-  input {
-    padding: 8px;
-    border-radius: 4px;
-    border: 1px solid #ccc;
-    width: 89%;
-  }
-
-  .box-form, .box-form-1{
-    width: 40%;
-  }
-
-  .botao{
-    display: flex;
-    width: 100%;
-    justify-content: center;
-  }
-  
-  button {
-    padding: 10px 15px;
-    border: none;
-    background-color: #000000;
-    color: white;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  button:hover {
-    background-color: #5d5c5c;
-  }
-
-h2{
-    display: flex;
-    justify-content: center;
+.painel {
+  width: 80%;
+  height: 100vh;
 }
-  
-  /* Ajustando o layout responsivo */
-  @media (max-width: 768px) {
-    body {
-      flex-direction: column;
-    }
-  
-    .menu-lateral {
-      width: 100%;
-      height: auto;
-      flex-direction: row;
-      justify-content: space-around;
-    }
-  
-    .main-content {
-      padding: 10px;
-    }
-  }
-  
+
+.container-painel {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+}
+
+.header-painel {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  height: 5%;
+  width: 100%;
+}
+
+.usuario {
+  width: 20%;
+}
+
+.notificacoes {
+  width: 10%;
+  height: 25px;
+}
+
+.notificacoes img {
+  height: 20px;
+}
+
+.notificacoes:hover {
+  cursor: pointer;
+  border-radius: 90px;
+  background-color: #969ba3;
+}
+
+.nome {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 10%;
+  height: 100%;
+}
+
+
+.linha-horizontal {
+  width: 100%;
+  border: solid 1px #D3D3D3;
+  width: 98%;
+  margin-left: 1%;
+}
+
+.cabecalho {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 20px;
+  height: 10%;
+  width: 100%;
+}
+
+.conteudo-cadastro {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 85%;
+  width: 100%;
+  padding: 10px;
+}
+
+.cadastro {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 85%;
+  width: 55%;
+  border-radius: 15px;
+  background-color: #D9D9D9;
+  padding: 20px;
+}
+
+.horizontal {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  height: 50%;
+}
+
+.input1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 45%;
+}
+
+.input2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 45%;
+}
+
+.ipt {
+  height: 35px;
+  border: transparent;
+  border-radius: 15px;
+  text-align: center;
+}
+
+.descricao {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 35%;
+  padding: 20px;
+}
+
+.conteudo-desc {
+  width: 100%;
+}
+
+.ipt_desc {
+  margin-top: 10px;
+  width: 100%;
+  height: 150px;
+  border-radius: 15px;
+  resize: vertical;
+  padding: 10px;
+}
+
+.btn {
+  width: 150px;
+  height: 35px;
+  margin-top: 25px;
+  border: transparent;
+  border-radius: 10px;
+  background-color: #000;
+  color: #D3D3D3;
+  font-size: 15px;
+  font-weight: bold;
+}
+
+.btn:hover {
+  height: 36px;
+  width: 155px;
+}
