--- a/public/css/conta.css
+++ b/public/css/conta.css
@@ -60,7 +60,7 @@
     margin-left: 15%;
   }
   
-  a {
+  .container-menu a {
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -77,7 +77,7 @@
     }
   }
   
-  a:hover {
+  .container-menu a:hover {
     color: black;
     background-color: #969ba3;
     height: 35px;
@@ -160,6 +160,37 @@
 
   }
 
-  th, tr {
+  .tabela {
+    width: 100%;
+  }
+
+  .tabela thead {
+    background-color: #969ba3;
+  }
+
+  .tabela tr {
+    height: 50px;
+  }
+
+  .tabela th, tr {
     border: solid 1px #D3D3D3;
+    padding: 5px;
+  }
+
+  .tabela td {
+    text-align: center;
+    height: 40px;
+    border-bottom: 1px solid #D3D3D3;
+  }
+
+  .tabela .icon {
+    font-size: 20px;
+    padding: 10px;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+  }
+
+  .tabela .icon:hover {
+    cursor: pointer;
+    background-color: #969ba3;
   }
