--- a/public/css/departamentos.css
+++ b/public/css/departamentos.css
@@ -60,7 +60,7 @@
     margin-left: 15%;
   }
   
-  a {
+  .container-menu a {
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -70,7 +70,6 @@
     height: 35px;
     text-decoration: none;
     color: #000;
-    transition: ease-in 0.3s;
   
     img {
       height: 25px;
@@ -78,7 +77,7 @@
     }
   }
   
-  a:hover {
+  .container-menu a:hover {
     color: black;
     background-color: #969ba3;
     height: 35px;
@@ -127,100 +126,71 @@
     border-radius: 90px;
     background-color: #969ba3;
   }
-  
-  .nome {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 10%;
-    height: 100%;
-  }
-  
-  
+
   .linha-horizontal {
     width: 100%;
     border: solid 1px #D3D3D3;
     width: 98%;
     margin-left: 1%;
   }
-  
+
+  .painel-conta {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+  }
+
   .cabecalho {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    padding: 20px;
     height: 10%;
     width: 100%;
-  }
-  
-  .conteudo-cadastro {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 85%;
-    width: 100%;
-    padding: 10px;
-  }
-  
-  .cadastro {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 85%;
-    width: 55%;
-    border-radius: 15px;
-    background-color: #D9D9D9;
-    padding: 20px;
-  }
-  
-  .titulo {
-    height: 15%;
+    padding: 15px;
   }
 
-  .horizontal {
+  .conteudo-painel {
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
+    flex-direction: column;
+    height: 90%;
     width: 100%;
-    height: 60%;
+    padding: 20px;
+
   }
-  
-  .input1 {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 45%;
+
+  .tabela {
+    width: 100%;
   }
-  
-  .input2 {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 45%;
+
+  .tabela thead {
+    background-color: #969ba3;
   }
-  
-  .ipt {
-    height: 35px;
-    border: transparent;
-    border-radius: 15px;
+
+  .tabela tr {
+    height: 50px;
+  }
+
+  .tabela th, tr {
+    border: solid 1px #D3D3D3;
+    padding: 5px;
+  }
+
+  .tabela td {
     text-align: center;
+    height: 40px;
+    border-bottom: 1px solid #D3D3D3;
   }
-  
-  .btn {
-    width: 150px;
-    height: 35px;
-    margin-top: 25px;
-    border: transparent;
-    border-radius: 10px;
-    background-color: #000;
-    color: #D3D3D3;
-    font-size: 15px;
-    font-weight: bold;
+
+  .tabela .icon {
+    font-size: 20px;
+    padding: 10px;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
   }
-  
-  .btn:hover {
-    height: 36px;
-    width: 155px;
+
+  .tabela .icon:hover {
+    cursor: pointer;
+    background-color: #969ba3;
   }
